--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "@supabase/supabase-js": "^2.80.0",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mime-types": "^3.0.1",
+    "multer": "^2.0.2"
   }
 }
